bynkc/tests/fixtures/negative/384_system_queue_needs_wire/src/ops/inbox.bynk
context ops.inbox
type Job = { id: String }
service inbox from queue("jobs") {
  on message(job: Job) -> Effect[QueueResult] {
    Ack
  }
}
